compiler/parser/yacc/y.output

state 0
	$accept: .Module $end 

	import  shift 3
	.  error

	Module  goto 1
	ImportStmt  goto 2

state 1
	$accept:  Module.$end 

	$end  accept
	.  error


state 2
	Module:  ImportStmt.    (1)

	.  reduce 1 (src line 17)


state 3
	ImportStmt:  import.ImportSpec ; 
	ImportStmt:  import.( ImportSpec ; ) 

	string_lit  shift 8
	identifier  shift 6
	(  shift 5
	.  error

	ImportSpec  goto 4
	ImportPath  goto 7

state 4
	ImportStmt:  import ImportSpec.; 

	;  shift 9
	.  error


state 5
	ImportStmt:  import (.ImportSpec ; ) 

	string_lit  shift 8
	identifier  shift 6
	.  error

	ImportSpec  goto 10
	ImportPath  goto 7

state 6
	ImportSpec:  identifier.ImportPath 

	string_lit  shift 8
	.  error

	ImportPath  goto 11

state 7
	ImportSpec:  ImportPath.    (5)

	.  reduce 5 (src line 22)


state 8
	ImportPath:  string_lit.    (6)

	.  reduce 6 (src line 25)


state 9
	ImportStmt:  import ImportSpec ;.    (2)

	.  reduce 2 (src line 19)


state 10
	ImportStmt:  import ( ImportSpec.; ) 

	;  shift 12
	.  error


state 11
	ImportSpec:  identifier ImportPath.    (4)

	.  reduce 4 (src line 22)


state 12
	ImportStmt:  import ( ImportSpec ;.) 

	)  shift 13
	.  error


state 13
	ImportStmt:  import ( ImportSpec ; ).    (3)

	.  reduce 3 (src line 19)


9 terminals, 5 nonterminals
7 grammar rules, 14/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
54 working sets used
memory: parser 6/30000
0 extra closures
10 shift entries, 1 exceptions
6 goto entries
1 entries saved by goto default
Optimizer space used: output 16/30000
16 table entries, 0 zero
maximum spread: 9, maximum offset: 9
